--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
- <span style="background:#ff3300">  hello<br>
-   <span style="background:#dee6ff"> my name is xwq
+ <span style="background:#ff3300">  hello<br></span>
+   <span style="background:#dee6ff"> my name is xwq</span>
