--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <span style="background:#ffefe1">            hello<br></span>
    <span style="background:#dee6ff">              my name is xwq</span>
+<div>
+     <iframe width="500" height="400" frameborder="0" src="https://cn.bing.com/maps/embed?h=400&w=500&cp=28.98225322384154~119.18822163718382&lvl=15&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
+     </iframe>
+     <div style="white-space: nowrap; text-align: center; width: 500px; padding: 6px 0;">
+        <a id="largeMapLink" target="_blank" href="https://cn.bing.com/maps?cp=28.98225322384154~119.18822163718382&amp;sty=r&amp;lvl=15&amp;FORM=MBEDLD">查看放大的地图</a> &nbsp; | &nbsp;
+        <a id="dirMapLink" target="_blank" href="https://cn.bing.com/maps/directions?cp=28.98225322384154~119.18822163718382&amp;sty=r&amp;lvl=15&amp;rtp=~pos.28.98225322384154_119.18822163718382____&amp;FORM=MBEDLD">获取路线</a>
+    </div>
+</div>
